1/28/14 move SolutionsGraphNode to common.view.graph.GraphNode
1/28/14 factor out duplication in CustomGraphNode and SolutionsGraphNode, make linear graph and interactive options to SolutionsGraphNode
# 1.0.0-dev.9 1/23/14
1/27/14 linear graph: add 'off scale' label in arrow
1/27/14 linear graph: position indicators correctly
1/27/14 linear graph: add indicators, values are correct, position is not correct (always at zero)
1/27/14 linear graph: add arrow to top of scale, implement tick marks, wire up zoom buttons
# 1.0.0-dev.8 1/23/14
1/27/14 add jsdoc @private tags throughout code
1/27/14 make autoFill and option of BasicModel, instead of a constructor param
1/27/14 make SolutionsModel a subtype of BasicsModel, which gives us auto-fill animation and eliminates duplicate code
1/27/14 add animation of auto-fill to 'Basics' model
1/27/14 make DropperFluidNode observe Dropper.flowRateProperty instead of onProperty and emptyProperty
1/27/14 delete unused optional arg from Solute.createCustom
1/27/14 use same location for water faucet in 'Basics' and 'Solutions' screens
1/27/14 use same location and size for beakers in all 3 screens, ensure that dropper is above beaker
1/27/14 make it easier to adjust vertical spacing of zoom buttons and Log/Linear switch
1/27/14 add vertical line between graph and Linear/Log switch
1/27/14 use water color for custom solution
1/27/14 integrate new 'Solutions' icon, use old 'Solutions' icon for 'Basics' screen
# 1.0.0-dev.7 1/23/14
1/23/14 add option to connect probe to left|center|right of pH meter
1/23/14 RatioNode: reduce lots of Vector2 allocations by computing x and y coordinates separately
1/23/14 fix Reset All so that it fills 0.5L
1/23/14 center controls under beaker, because it looks better and we have room for i18n now
1/23/14 move linear graph to Solutions screen
1/23/14 rounded corners on pH probe tip
1/23/14 add a probe to pH meter that extends to bottom of beaker