@@ -1,3 +1,4 @@
+1/28/14 remove CustomModel.step 'do nothing' function, since screen.model.step is now optional in joist.Sim.animationLoop
 1/28/14 move SolutionsGraphNode to common.view.graph.GraphNode
 1/28/14 factor out duplication in CustomGraphNode and SolutionsGraphNode, make linear graph and interactive options to SolutionsGraphNode
 # 1.0.0-dev.9 1/23/14
